<resources>
    <string name="app_name">Weather</string>

    <string name="action_refresh">Refresh</string>
    <string name="action_city_management">City Management</string>
    <string name="action_settings">Settings</string>

    <string name="today">TODAY</string>
    <string name="tomorrow">TOMORROW</string>
    <string name="sunday">SUN</string>
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THU</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>

    <string name="weather">weather</string>
    <string name="temperature">Temperature</string>
    <string name="wind">Wind</string>
    <string name="dc">°</string>

    <string name="highest">Highest</string>
    <string name="lowest">Lowest</string>
    <string name="humidity">Humidity</string>
    <string name="comfortable">Comfortable</string>
    <string name="wind_direction">Direction</string>
    <string name="wind_power">Power</string>
    <string name="wind_level">Level</string>
    <string name="pm25">PM2.5</string>
    <string name="heavy_pollution">Heavy</string>

    <string name="town">TOWN</string>

    <string-array name="day_of_week">
        <item>SUN</item>
        <item>MON</item>
        <item>TUE</item>
        <item>WED</item>
        <item>THU</item>
        <item>FRI</item>
        <item>SAT</item>
    </string-array>
</resources>
