<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--<item
        android:id="@+id/action_city"
        android:orderInCategory="1"
        android:title="@string/town"
        app:showAsAction="always"
        android:actionViewClass="android.support.v7.widget.AppCompatSpinner"/>-->

    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="1"
        android:title="@string/action_refresh"
        android:icon="@mipmap/ic_refresh"
        app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/action_city_management"
        android:orderInCategory="2"
        android:title="@string/action_city_management"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>