<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/ll_day1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_week_day1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@color/white_alpha60"
            android:text="@string/monday"/>
        <ImageView
            android:id="@+id/iv_weather1"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:id="@+id/tv_temperatures1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@color/white_alpha60" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_day2"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_week_day2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@color/white_alpha60"
            android:text="@string/tuesday"/>
        <ImageView
            android:id="@+id/iv_weather2"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:id="@+id/tv_temperatures2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@color/white_alpha60" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_day3"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_week_day3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@color/white_alpha60"
            android:text="@string/wednesday"/>
        <ImageView
            android:id="@+id/iv_weather3"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:id="@+id/tv_temperatures3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@color/white_alpha60" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_day4"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_week_day4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@color/white_alpha60"
            android:text="@string/thursday"/>
        <ImageView
            android:id="@+id/iv_weather4"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:id="@+id/tv_temperatures4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@color/white_alpha60" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_day5"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_week_day5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@color/white_alpha60"
            android:text="@string/friday"/>
        <ImageView
            android:id="@+id/iv_weather5"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/ic_snowy"/>
        <TextView
            android:id="@+id/tv_temperatures5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@color/white_alpha60"
            android:text="8°/3°"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_day6"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_week_day6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@color/white_alpha60"
            android:text="@string/saturday"/>
        <ImageView
            android:id="@+id/iv_weather6"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/ic_snowy"/>
        <TextView
            android:id="@+id/tv_temperatures6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@color/white_alpha60"
            android:text="8°/3°"/>
    </LinearLayout>

</LinearLayout>